--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '2.7.1'
+    id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -31,6 +31,8 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    implementation 'org.springframework.boot:spring-boot-starter-mustache'
+
     //testImplementation 'org.springframework.security:spring-security-test'
 }
 
