--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
-    implementation('or')
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
     //testImplementation 'org.springframework.security:spring-security-test'
 }
