--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mustache'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    implementation('org.springframework.session:spring-session-jdbc')
+    implementation 'org.springframework.session:spring-session-jdbc'
 
     //testImplementation 'org.springframework.security:spring-security-test'
 }
