--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,22 @@
+buildscript {
+    ext {
+        springBootVersion = '2.1.9.RELEASE'
+    }
+    repositories {
+        mavenCentral()
+        jcenter()
+    }
+    dependencies {
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+    }
+}
+
+
 plugins {
     id 'java'
     id 'org.springframework.boot' version '2.6.1'
     id 'io.spring.dependency-management' version '1.1.0'
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0-RC2'
+
 }
 
 group = 'com.example'
@@ -41,13 +55,4 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
-compileKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
-compileTestKotlin {
-    kotlinOptions {
-        jvmTarget = "1.8"
-    }
-}
+
